Add inline tab-completion hints for all subcommands
- Show <name> placeholder when typing name arg for start/stop/play/delete
- Show [seconds] hint alongside player suggestions for start
- Filter already-selected players from suggestions